compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__module_private_type_leak_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 867
expression: "external type PrivateType\nexternal fn go() -> PrivateType = \"\" \"\"\npub fn leak_type() { [go()] }"

---
error: Private type used in public interface
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn leak_type() { [go()] }
  │ ^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.

